THIS is everything working as I wanted... hwoever, it's kind of a fragile mess (thanks aspectj + spring aop). I need to remove hard coded paths from the build.gradle file... but not sure how to do that yet